--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello</h1>
     <h2>JavaScript</h2>
-    <script src="js/intro.js"></script>
+    <script src="js/loops-arrays.js"></script>
 </body>
 </html>
